# Smart-Event-Assistant

./: .env  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: config.ini  config.py  logging_config.py
app/common/: auth.py
app/database/: attachment_db.py  db.py  event_db.py  feedback_db.py  interest_db.py  redis_db.py  reporting_db.py  speaker_db.py  user_db.py
app/routers/: chatbot.py  event.py  feedback.py  interests.py  reporting.py  speakers.py  user.py  user_interests.py
app/schema/: attachment_models.py  event_models.py  feedback_models.py  interests_models.py  reporting_models.py  speaker_models.py  user_interest_models.py  user_models.py
app/utils/: azurechatbot.py  chatbot_sessions.py  prompt_template.py
