[tool.poetry]
name = "smart-event-assistant"
version = "0.1.0"
description = ""
authors = ["rama-alalawneh_pwcit <rama.alalawneh@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
