[tool.poetry]
name = "smart-event-assistant"
version = "0.1.0"
description = ""
authors = ["rama-alalawneh_pwcit <rama.alalawneh@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
bcrypt = "^4.1.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
